--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
-node_modules
+# dependencies
+node_modules/
+
+# next.js build output
+.next/
+out/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# environment
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# misc
+.DS_Store
