--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.0.0",
+    "next": "^14.2.33",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -15,7 +15,7 @@
     "@types/node": "24.10.1",
     "@types/react": "19.2.7",
     "autoprefixer": "10.4.0",
-    "postcss": "8.4.0",
+    "postcss": "^8.5.6",
     "tailwindcss": "3.4.0",
     "typescript": "^5.2.2"
   }
