--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.1",
     "@types/node": "24.10.1",
     "@types/react": "19.2.7",
     "autoprefixer": "10.4.0",
