--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "esModuleInterop": true,
     "module": "esnext",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
