--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
-    "next": "^14.2.33",
+    "next": "^16.0.7",
     "radix-ui": "^1.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
